# 242b-hw3

./: .gitignore  config.py  fun.ipynb  generation_quality.py  main.ipynb  models.py  plot.py  pyproject.toml  results.py  tokenizer.py  training.py  utils.py
fine_tuning/: build_instruction_dataset.py  colab.ipynb  controlled_prompts.py  demo.py  fine_tune.py  helpers.py
